import java.io.*;
import java.util.*;

/**
 * Utility class for parsing student data from input files.
 * Reads student information from a formatted text file and creates
 * UniversityStudent objects.
 * 
 * @author LonghornNetwork Team
 */
public class DataParser {
    /**
     * Parses student information from a file and returns a list of UniversityStudent objects.
     * The input file should follow the format specified in the project documentation.
     * 
     * @param filename The path to the input file containing student data
     * @return A list of UniversityStudent objects parsed from the file
     * @throws IOException If there is an error reading the file or if the file format is invalid
     */
    public static List<UniversityStudent> parseStudents(String filename) throws IOException {
        return new ArrayList<>();
    }
}
