import java.util.*;

/**
 * Implements the Gale-Shapley stable matching algorithm for roommate assignment.
 * Pairs students based on their roommate preferences, ensuring stable matches
 * where no two students would prefer each other over their current assignments.
 * 
 * @author LonghornNetwork Team
 */
public class GaleShapley {
    /**
     * Assigns roommates to students using the Gale-Shapley stable matching algorithm.
     * Each student is matched with their highest-priority preferred roommate if
     * mutually possible. Students without preferences or with incomplete preference
     * lists may remain unpaired.
     * 
     * @param students The list of UniversityStudent objects to match
     */
    public static void assignRoommates(List<UniversityStudent> students) {
    }
}
