
/**
 * Forms pods (groups) of students using Prim's algorithm to create
 * minimum spanning trees based on connection strengths. Pods are formed
 * to maximize the total connection strength within each group.
 * 
 * @author LonghornNetwork Team
 */
public class PodFormation {
    
    /**
     * Constructs a PodFormation instance with the given student graph.
     * 
     * @param graph The StudentGraph representing student connections
     */
    public PodFormation(StudentGraph graph) {
        // constructor
    }

    /**
     * Forms pods of the specified size using Prim's algorithm.
     * Groups students into pods based on their connection strengths,
     * ensuring that each pod contains students with strong relationships.
     * 
     * @param podSize The desired size of each pod
     */
    public void formPods(int podSize) {
        // Method signature only
    }
}
